--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -138,6 +138,12 @@
     margin-top: 60px;
   }
 
+  .responsive-clear {
+    display: none;
+  }
+
+
+
 //media queries
 
 @media (max-width: 4000px) {
@@ -149,6 +155,10 @@
 @media (max-width: 1200px) {
     .responsive-dropdown {
         display: contents;
+    }
+
+    .responsive-clear {
+      display: contents;
     }
 
     .category {
