--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,7 +71,7 @@
           <div class="farmer-details">
             <h2>Billy Joel</h2>
             <h4>Barcelona, Spain</h4>
-            <p>I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+            <p>I started when I was a little boy assisting my father with his farm. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots.</p>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
           <div class="farmer-details">
             <h2>Luke Skywalker</h2>
             <h4>Madrid, Spain</h4>
-            <p>I love my job and love the feeling of knowing I provide produce to local companies. My products are grown organically and I have no doubt that you will enjoy the qualitymy produce.</p>
+            <p>I love my job and love the feeling of knowing I provide produce to local companies. My products are grown organically, there's no doubt you will enjoy the quality.</p>
           </div>
         </div>
       </div>
