styling for show-page on mobile

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -53,6 +53,14 @@
   margin-right: 20%;
 }
 
+@media (max-width: 1200px) {
+  .profile-infos .profile-text {
+    margin-left: 0px;
+    margin-top: 100px;
+    width: 1122px;
+  }
+}
+
 
 
 
