--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -165,6 +165,10 @@
         display: none;
     }
 
+    .container-f {
+      width: 90vw;
+    }
+
     // .input-search {
     //     width: 100vw;
     // }
@@ -172,6 +176,10 @@
     // .container-f {
     //     width: 100%;
     // }
+
+    .product-index-search {
+      margin-top: 8px;
+    }
 
     .d-flex {
       display: block !important;
