made show mage more mobile friendly

--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -66,7 +66,7 @@
                 <%= f.input :category, as: :hidden, input_html: { value: params[:query].try(:[], :category) } %>
               </div>
               <div>
-                <%= f.button :submit, "Search", class: "btn-f-d" %>
+                <%= f.button :submit, "Search", class: "btn-f-d product-index-search" %>
               </div>
             </div>
             <% end %>
